--- a/Frontend/Core/Components/Layout/MainLayout.razor
+++ b/Frontend/Core/Components/Layout/MainLayout.razor
@@ -2,18 +2,16 @@
 
 <div class="app-layout">
     <header class="app-header">
-        <h1 class="app-title">Szpital brzeziny</h1>
+        <h1 class="app-title">Szpital Brzeziny</h1>
     </header>
 
-    <nav class="app-nav">
         <NavMenu IsLogged="IsLogged" />
-    </nav>
 
     <main class="app-content">
         @Body
     </main>
 
     <footer class="app-footer">
-        <p>&copy; 2025 Szpital brzezin – Wszystkie prawa zastrzeżone</p>
+        <p>&copy; 2025 Szpital Brzeziny – Wszystkie prawa zastrzeżone</p>
     </footer>
 </div>
