--- a/Frontend/Core/Components/Pages/NewHome.razor
+++ b/Frontend/Core/Components/Pages/NewHome.razor
@@ -14,13 +14,7 @@ else
 
         <!-- Header -->
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <img src="images/szpital_brzeziny_logo_uzupelniajace.png" alt="Logo" class="logo-small" />
-            <a href="/profil">
-                <div class="d-flex align-items-center">
-                    <!-- Ustawić działające zdjęcie -->
-                    <img src="https://via.placeholder.com/40" alt="Profil" class="profile-icon" />
-                </div>
-            </a>
+            <img src="/Images/szpital_brzeziny_logo_uzupelniajace.png" alt="Logo" class="logo-small" />
         </div>
 
         <!-- Dynamic Greeting -->
@@ -32,8 +26,8 @@ else
         <div class="row quick-access mb-5 g-4">
             <div class="col-6 col-md-3">
                 <div class="tile shadow-sm">
-                    <i class="bi bi-geo-alt-fill tile-icon"></i>
-                    <p>Znajdź Szpital</p>
+                    <i class="bi bi-map tile-icon"></i>
+                    <p>Odnajdź się w szpitalu</p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
@@ -59,7 +53,7 @@ else
         <div class="next-steps mb-5 p-4 rounded shadow-sm">
             <h5 class="mb-4">Twoje najbliższe</h5>
             <ul class="list-unstyled">
-                @foreach(var item in ClosestCalendarItems)
+                @foreach (var item in ClosestCalendarItems.OrderBy(x => x.Time))
                 {
                     <li class="mb-3 d-flex align-items-center">
                         <i class="bi bi-calendar-event me-3 text-primary fs-4"></i>
