--- a/Frontend/Core/Components/Pages/NewHome.razor
+++ b/Frontend/Core/Components/Pages/NewHome.razor
@@ -25,10 +25,10 @@ else
         <!-- Quick Access Tiles -->
         <div class="row quick-access mb-5 g-4">
             <div class="col-6 col-md-3">
-                <div class="tile shadow-sm">
+                <a href="/map" class="tile shadow-sm">
                     <i class="bi bi-map tile-icon"></i>
                     <p>Odnajdź się w szpitalu</p>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-md-3">
                 <a href="/doctors" class="tile shadow-sm">
@@ -38,13 +38,13 @@ else
             </div>
             <div class="col-6 col-md-3">
                 <div class="tile shadow-sm">
-                    <i class="bi bi-calendar-plus-fill tile-icon"></i>
+                    <a href="#" class="bi bi-calendar-plus-fill tile-icon"></a>
                     <p>Umów wizytę</p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="tile shadow-sm">
-                    <i class="bi bi-book-fill tile-icon"></i>
+                    <a href="/care" class="bi bi-book-fill tile-icon"></a>
                     <p>Poradnik Pacjenta</p>
                 </div>
             </div>
